<resources>
    <string name="app_name">S-Cape_App</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="email">email</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="translate">Translate</string>
    <string name="challenge">Challenge</string>
    <string name="route">Route</string>
    <string name="facebook_app_id">1901836240060468</string>
    <string name="do_you_want_to_keep_this_photo">Do you want to keep this photo?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string-array name="states">
        <item>GA</item>
        <item>WA</item>
    </string-array>
    <string-array name="foodType">
        <item>All</item>
        <item>Italian</item>
        <item>Pizza</item>
        <item>BBQ</item>
        <item>American</item>
        <item>Mexican</item>
        <item>Southern / Soul</item>
        <item>Deli / Bodega</item>
    </string-array>
    <string-array name="NoStateSelected">
        <item>No State Selected</item>
    </string-array>
    <string-array name="Georgia">
        <item>Atlanta</item>
        <item>Athens</item>
        <item>Savannah</item>
    </string-array>
    <string-array name="Washington">
        <item>Seattle</item>
        <item>Tacoma</item>
        <item>Spokane</item>
    </string-array>
</resources>