<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:id="@+id/imageUser" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="picture name"
        android:id="@+id/editTextPhotoName"/>

    <TextView
        android:text="@string/do_you_want_to_keep_this_photo"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="0.5"
            android:id="@+id/buttonNo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="0.5"
            android:id="@+id/buttonYes" />

    </LinearLayout>

</LinearLayout>