<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity__register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ajp.s_cape_app.Activities.Activity_Register">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            app:srcCompat="@drawable/s_cape"
            android:id="@+id/imageView"
            android:scaleType="centerCrop" />

        <TextView
            android:text="Get out there"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="50sp"
            android:textColor="@color/SCape_White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_welcome" />

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:background="@color/SCape_White"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/editTextUsernameSignUp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:hint="@string/password"
            android:background="@color/SCape_White"
            android:ems="10"
            android:id="@+id/editTextPasswordSignUp" />


        <Button
            android:text="@string/sign_up"
            android:layout_width="125dp"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/SCape_White"
            android:background="@color/SCape_Light_Blue"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignUp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Already a member? Sign in!"
                android:layout_marginTop="18dp"
                android:textSize="18sp"
                android:textColor="@color/SCape_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:id="@+id/textView_BackToLogin" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
